messages.properties classement

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -98,17 +98,17 @@ poidskg=Weight (kg)
 Total=Total
 Ordre=Order
 
-# recoltesStatEssaim.html
+# recolte/recoltesStatEssaim.html
 Totalpage=Total page
 ProductionEssaim=Swarm Production
 ProductionEssaimRecolte=Swarm/Harvest Production
 
-# ruchesListePlus.html ruchesListePlusRucher.html
+# ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
 commentaire1=Comments1
 commentaire2=Comments2
 commentaire3=Comments3
 
-# essaimStatistiques.html
+# essaim/essaimStatistiques.html
 Max=Max
 Min=Min
 Moyen=Average
@@ -116,14 +116,14 @@ Duree=Duration
 aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
 masquerInactif=Hide inactives
 
-# rucherStatistiques.html
+# rucher/rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
 
 # error.html
 page=Page
 oups=Oups, something went wrong !
 
-# rucherDetail.html
+# rucher/rucherDetail.html
 Pasderuche=Currently no hive in this apiary
 depotNePeutEtreSupprime=The depot cannot be deleted
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
@@ -134,7 +134,7 @@ historique=History
 poidsVide=Weight
 nbCadres=Frames
 
-# rucheDetail.html
+# ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
 supprimerrucheeteven?=Delete this hive and its events?
 supprimercetteruche?=Delete this hive?
@@ -147,21 +147,22 @@ nbCadresMax=Frames max
 listeHausses=Supers list
 lesRuches=Hives
 
-# rucheAjoutRetrait.html
+# ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Add/Remove/Order supers.
 ajouterhausse=Add this super
 retirerhausse=Remove this super
+retirerreordonnerHausses=Remove - reorder supers
 
-# rucheRetraitHausseForm.html
+# ruche/rucheRetraitHausseForm.html
 retraithausseXXdela=Remove super {0} from 
 
-# rucheHausseForm.html
+# ruche/rucheHausseForm.html
 ajouthausseXXsur=Add hive {0} on 
 
-# rucheTypesListe.html
+# ruche/rucheTypesListe.html
 rucheType= Hive type
 
-# ruchesListe.html
+# ruche/ruchesListe.html
 selectruchestraiter=Select hives for treatment
 
 # ruche
@@ -180,11 +181,11 @@ nomexiste=This name already exist
 evenementCommentaire=Add a comment event
 pesee=Weighing
 
-# rucheCadreForm
+# ruche/rucheCadreForm
 cadresLe=frames on
 evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
 
-# essaimGraphe.html
+# essaim/essaimGraphe.html
 MielKg=Honey(kg)
 MielDescKg=Descendants honey(kg) 
 
@@ -205,7 +206,7 @@ type=Type
 nb=Nb
 etat=State
 
-# rucherDetailIgn.html
+# rucher/rucherDetailIgn.html
 parcours=Route
 parcoursoptimum=Optimum route along the hives
 ruches=hives
@@ -230,7 +231,7 @@ ajoutderuches=Add hives
 rucherscarteosm=Apiaries. OpenStreetMap
 rucherscarteggmaps=Apiaries. Google Maps
 
-# ruhersListeIgn.html
+# rucher/ruhersListeIgn.html
 rucherscarteign=Apiaries. IGN Map
 couchemarqueursruchers=Apiary marker layer
 aiderucherlisteignmarkers=Doubleclic on an apiary to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect 
@@ -244,7 +245,7 @@ exportPdf=PDF export
 statistiquesruchers=Apiary statistics
 distButinage=Foraging distances
 
-# personnesListe.html
+# personne/personnesListe.html
 prenom=First name
 email=Email
 login=Login
@@ -253,15 +254,15 @@ listePersonnes=Persons list
 ajouterPersonne=Add a person
 lesPersonnes=People
 
-# personneForm.html
+# personne/personneForm.html
 emailexiste=This email is already used
 personne=People
 
-# personneDetail.html
+# personne/personneDetail.html
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
 supprimercettepersonne=Delete this person?
 
-# essaimsListe.html
+# essaim/essaimsListe.html
 selectessaimstraiter=Select swarms for treatment
 evenementsSucre=Add sugar events
 evenementsTraitement=Add treatment events
@@ -280,22 +281,22 @@ souche=Stem
 agressivite=Agressiveness
 proprete=Cleanliness
 
-# essaimSucreLotForm.html
+# essaim/essaimSucreLotForm.html
 ajoutSucreLot=Add sugar to the batch of swarms 
 
-# essaimTraitementLotForm.html
+# essaim/essaimTraitementLotForm.html
 traitementLot=Batch Varroa treatment 
 
-# essaimCommentaireLotForm.html
+# essaim/essaimCommentaireLotForm.html
 commentaireLotEssaim=Add a comment to the batch of swarms
 
-# rucheCommentaireLotForm.html
+# ruche/rucheCommentaireLotForm.html
 commentaireLotRuche=Add a comment to the batch of hives  
 
-# hausseCommentaireLotForm.html
+# hausse/hausseCommentaireLotForm.html
 commentaireLotHausses=Add a comment to the batch of supers
 
-# essaimAssociationForm.html
+# essaim/essaimAssociationForm.html
 echangePositionsRuches=Exchange positions of hives {0} and {1}
 
 # essaim
@@ -311,7 +312,7 @@ associationruche=Association with a hive
 association=Association
 essaimdanslaruche=This swarm in in hive
 
-# essaimAssociation.html
+# essaim/essaimAssociation.html
 mettreessaimdanslaruche=Put this swarm in hive :
 
 mettreessaimdansruche=Put swarm in this hive
@@ -319,7 +320,7 @@ retourrucheaudepot=Hive back to depot
 
 cloneessaimcrees=Swarm(s) {0} created
 
-# essaimDetail.html
+# essaim/essaimDetail.html
 essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
 supprimeressaimevenements=Delete this swarm and his events?
 supprimeressaim=Delete this swarm?
@@ -333,7 +334,7 @@ evenementDispersion=Add a dispersion event/Change queen
 evenementPesee=Add a weight event
 evenementCadres=Add a frame event
 
-# essaimDispersionForm
+# essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
 nouvellereine=New queen : choose the swarm for hive
 
@@ -341,7 +342,6 @@ nouvellereine=New queen : choose the swarm for hive
 hausse=Super
 lesHausses=Supers
 Pasdehausse=No super
-retirerreordonnerHausses=Remove - reorder supers
 ajouterHausses=Add supers
 ajouterHausse=Add a super
 ajoutRetraitHausses=Add/Remove/Reorder supers
@@ -350,9 +350,6 @@ nombredecadresmax=Max frame number
 saisirnbcadresinfmax=Get number of frames < Max frame number
 
 # Hausse detail clone
-nomhaussesvirgule=Super names separated with a comma
-evenementRemplissage=Add a filling event
-haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
 clonehaussecreees=Super(s) {0} created
 
 # récoltes
@@ -372,17 +369,17 @@ ROMARIN=Rosemary
 
 ProductionRuchersRecolte=Production Apiaries per harvest
 
-# recolteChoixHausses.html
+# recolte/recolteChoixHausses.html
 ajoutretraithaussesrecolte=Addition/Removal of supers
 retirerHausses=Remove supers
 selecthaussestraiter=Select the supers to be processed
 
-# recolteHausseForm.html
+# recolte/recolteHausseForm.html
 plus=More
 poidsAvantSupPoidsApres=The weight before extraction must be greater than or equal to the weight after extraction.
 poidsVideKg=Empty weight {0}kg
 
-# recolteDetail.html
+# recolte/recolteDetail.html
 enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
 poidsAvant=Weight before harvest
 poidsApres=Weight after harvest
@@ -398,7 +395,7 @@ poidsMielPot=Honey weight jarred
 poidsMielMoyen=Honey average weight per hive
 haussesRecolte=Harvest supers
 
-# recoltesStat.html
+# recolte/recoltesStat.html
 productionessaim=Production by swarm. 
 poidsMielHausses=Supers honey weight
 
@@ -431,7 +428,7 @@ evenementsrucheajout=Hive add in apiary events
 poidsruche=Hive weight
 diff=Difference
 
-# rucheTypesListe.html
+# ruche/rucheTypesListe.html
 rucheTypes=Hive types
 ajouterRucheType=Add a hive type
 
@@ -451,15 +448,20 @@ ajouterEvenement=Add event
 evenementCree=Create an event
 aucun=<None>
 aucune=<None>
+
+# hausse/hausseDetail.html
 supprimerhausseevenement=Delete this super and all its events?
+nomhaussesvirgule=Super names separated with a comma
 supprimerhausse?=Delete this super?
+evenementRemplissage=Add a filling event
+haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
 supprimerevenement=Delete this event?
 afficherrucheetc=Show/hide hive, swarm...
 
-# rucherMeteo.html
+# rucher/rucherMeteo.html
 aujourdhui=Today
-historique=History
 previsions=Forcast
+historique=History
 meteo=Weather
 description=Description
 temperature=Temp
