--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -98,17 +98,17 @@ poidskg=Poids (kg)
 Total=Total
 Ordre=Ordre
 
-# recoltesStatEssaim.html
+# recolte/recoltesStatEssaim.html
 Totalpage=Total page
 ProductionEssaim=Production Essaims
 ProductionEssaimRecolte=Production Essaim/Récolte
 
-# ruchesListePlus.html ruchesListePlusRucher.html
+# ruche/ruchesListePlus.html ruche/ruchesListePlusRucher.html
 commentaire1=Commentaire1
 commentaire2=Commentaire2
 commentaire3=Commentaire3
 
-# essaimStatistiques.html
+# essaim/essaimStatistiques.html
 Max=Max
 Min=Min
 Moyen=Moyen
@@ -116,14 +116,14 @@ Duree=Durée
 aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
 masquerInactif=Masquer les inactifs
 
-# rucherStatistiques.html
+# rucher/rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
 
 # error.html
 page=Page
 oups=Oups, quelque chose s'est mal passé !
 
-# rucherDetail.html
+# rucher/rucherDetail.html
 Pasderuche=Pas de ruche actuellement dans ce rucher
 depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 ruchernonsupprimerefrecolte=Ce rucher ne peut être supprimé, il est référencé dans une récolte
@@ -134,7 +134,7 @@ historique=Historique
 poidsVide=Poids
 nbCadres=Cadres
 
-# rucheDetail.html
+# ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
 supprimerrucheeteven?=Supprimer cette ruche et ses événements ?
 supprimercetteruche?=Supprimer cette ruche ?
@@ -147,21 +147,22 @@ nbCadresMax=Cadres max
 listeHausses=Liste des hausses
 lesRuches=Ruches
 
-# rucheAjoutRetrait.html
+# ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
 ajouterhausse=Ajouter cette hausse
 retirerhausse=Retirer cette hausse
+retirerreordonnerHausses=Retirer Réordonner (glisser-déposer)
 
-# rucheRetraitHausseForm.html
+# ruche/rucheRetraitHausseForm.html
 retraithausseXXdela=Retrait de la hausse {0} de la 
 
-# rucheHausseForm.html
+# ruche/rucheHausseForm.html
 ajouthausseXXsur=Ajout de la hausse {0} sur la 
 
-# rucheTypesListe.html
+# ruche/rucheTypesListe.html
 rucheType= Type de ruche
 
-# ruchesListe.html
+# ruche/ruchesListe.html
 selectruchestraiter=Sélectionner les ruches à traiter
 
 # ruche
@@ -180,11 +181,11 @@ nomexiste=Ce nom existe déjà
 evenementCommentaire=Ajouter un événement Commentaire
 pesee=Pesée
 
-# rucheCadreForm
+# ruche/rucheCadreForm
 cadresLe=cadres le
 evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
 
-# essaimGraphe.html
+# essaim/essaimGraphe.html
 MielKg=Miel(kg)
 MielDescKg=Miel descendance(kg) 
 
@@ -205,7 +206,7 @@ type=Type
 nb=Nb
 etat=État
 
-# rucherDetailIgn.html
+# rucher/rucherDetailIgn.html
 parcours=Parcours
 parcoursoptimum=Parcours optimum des ruches
 ruches=ruches
@@ -230,7 +231,7 @@ ajoutderuches=Ajout de ruches
 rucherscarteosm=Ruchers. Carte OpenStreetMap
 rucherscarteggmaps=Ruchers. Carte Google
 
-# ruhersListeIgn.html
+# rucher/ruhersListeIgn.html
 rucherscarteign=Ruchers. Carte IGN
 couchemarqueursruchers=Couche des marqueurs Ruchers
 aiderucherlisteignmarkers=Doubleclic sur un rucher pour afficher son détail<br/>Un clic pour le sélectionner, puis clic pour le déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
@@ -244,7 +245,7 @@ exportPdf=Export PDF
 statistiquesruchers=Statistiques ruchers
 distButinage=Distances de butinage
 
-# personnesListe.html
+# personne/personnesListe.html
 prenom=Prénom
 email=Email
 login=Login
@@ -253,15 +254,15 @@ listePersonnes=Liste des personnes
 ajouterPersonne=Ajouter une personne
 lesPersonnes=Personnes
 
-# personneForm.html
+# personne/personneForm.html
 emailexiste=Cet email est déjà utilisé
 personne=Personne
 
-# personneDetail.html
+# personne/personneDetail.html
 personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
 supprimercettepersonne=Supprimer cette personne ?
 
-# essaimsListe.html
+# essaim/essaimsListe.html
 selectessaimstraiter=Sélectionner les essaims à traiter
 evenementsSucre=Ajouter des événements Sucre
 evenementsTraitement=Ajouter des événements Traitement
@@ -280,22 +281,22 @@ souche=Souche
 agressivite=Agressivité
 proprete=Propreté
 
-# essaimSucreLotForm.html
+# essaim/essaimSucreLotForm.html
 ajoutSucreLot=Ajout de sucre au lot d'essaims 
 
-# essaimTraitementLotForm.html
+# essaim/essaimTraitementLotForm.html
 traitementLot=Traitement Varroa du lot d'essaims 
 
-# essaimCommentaireLotForm.html
+# essaim/essaimCommentaireLotForm.html
 commentaireLotEssaim=Ajout d'un commentaire à un lot d'essaims
 
-# rucheCommentaireLotForm.html
+# ruche/rucheCommentaireLotForm.html
 commentaireLotRuche=Ajout d'un commentaire à un lot de ruches  
 
-# hausseCommentaireLotForm.html
+# hausse/hausseCommentaireLotForm.html
 commentaireLotHausses=Ajout d'un commentaire à un lot de hausses
 
-# essaimAssociationForm.html
+# essaim/essaimAssociationForm.html
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
 
 # essaim
@@ -311,7 +312,7 @@ associationruche=Associer avec une ruche
 association=Association
 essaimdanslaruche=Cet essaim est dans la ruche
 
-# essaimAssociation.html
+# essaim/essaimAssociation.html
 mettreessaimdanslaruche=Mettre cet essaim dans le ruche :
 
 mettreessaimdansruche=Mettre l'essaim dans cette ruche
@@ -319,7 +320,7 @@ retourrucheaudepot=Retour de la ruche au dépôt
 
 cloneessaimcrees=Essaim(s) {0} créé(s)
 
-# essaimDetail.html
+# essaim/essaimDetail.html
 essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
 supprimeressaimevenements=Supprimer cet essaim et ses événements ?
 supprimeressaim=Supprimer cette essaim ?
@@ -333,7 +334,7 @@ evenementDispersion=Disperser/Remérer
 evenementPesee=Ajouter un événement Pesée
 evenementCadres=Ajouter un événement Cadres
 
-# essaimDispersionForm
+# essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
 nouvellereine=Remérage : choisir l'essaim à mettre dans la ruche
 
@@ -341,7 +342,6 @@ nouvellereine=Remérage : choisir l'essaim à mettre dans la ruche
 hausse=Hausse
 lesHausses=Hausses
 Pasdehausse=Pas de hausse
-retirerreordonnerHausses=Retirer Réordonner (glisser-déposer)
 ajouterHausses=Ajouter des hausses
 ajouterHausse=Ajouter une hausse
 ajoutRetraitHausses=Ajouter/Retirer/Réordonner des hausses
@@ -350,9 +350,6 @@ nombredecadresmax=Nombre de cadres max
 saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
 
 # Hausse detail clone
-nomhaussesvirgule=Nom des hausses séparés par une virgule
-evenementRemplissage=Ajouter un événement Remplissage
-haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
 clonehaussecreees=Hausse(s) {0} créée(s)
 
 # récoltes
@@ -372,17 +369,17 @@ ROMARIN=Romarin
 
 ProductionRuchersRecolte=Production Ruchers par récolte
 
-# recolteChoixHausses.html
+# recolte/recolteChoixHausses.html
 ajoutretraithaussesrecolte=Ajout/Retrait de hausses
 retirerHausses=Retirer des hausses
 selecthaussestraiter=Sélectionner les hausses à traiter
 
-# recolteHausseForm.html
+# recolte/recolteHausseForm.html
 plus=Plus
 poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal au poids après extraction.
 poidsVideKg=Poids vide {0}kg
 
-# recolteDetail.html
+# recolte/recolteDetail.html
 enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
 poidsAvant=Poids avant extraction
 poidsApres=Poids après extraction
@@ -398,7 +395,7 @@ poidsMielPot=Poids de miel mis en pot
 poidsMielMoyen=Poids de miel moyen par ruche
 haussesRecolte=Hausses de la récolte
 
-# recoltesStat.html
+# recolte/recoltesStat.html
 productionessaim=Production par essaim.
 poidsMielHausses=Poids de miel hausses
 
@@ -431,7 +428,7 @@ evenementsrucheajout=Événements ruche ajout rucher
 poidsruche=Poids ruche
 diff=Différence
 
-# rucheTypesListe.html
+# ruche/rucheTypesListe.html
 rucheTypes=Types de ruches
 ajouterRucheType=Ajouter un type de ruche
 
@@ -451,12 +448,17 @@ ajouterEvenement=Ajouter un événement
 evenementCree=Créer un événement
 aucun=<Aucun>
 aucune=<Aucune>
+
+# hausse/hausseDetail.html
 supprimerhausseevenement=Supprimer cette hausse et ses événements ?
+nomhaussesvirgule=Nom des hausses séparés par une virgule
 supprimerhausse?=Supprimer cette hausse ?
+evenementRemplissage=Ajouter un événement Remplissage
+haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
 supprimerevenement=Supprimer cet événement ?
 afficherrucheetc=Afficher/masquer ruche, essaim...
 
-# rucherMeteo.html
+# rucher/rucherMeteo.html
 aujourdhui=Aujourd'hui
 previsions=Prévisions
 historique=Historique
