commentaire javascript thymeleaf

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -163,18 +163,15 @@ ajouthausseXXsur=Ajout de la hausse {0} sur la
 rucheType= Type de ruche
 
 # ruche/ruchesListe.html
-selectruchestraiter=Sélectionner les ruches à traiter
-
-# ruche
 ruche=Ruche
+selectruchestraiter=Sélectionner les ruches à traiter
 ajouterRuche=Ajouter une ruche
-ajoutRuche=Ajout d'une ruche
 listeRuches=Liste des ruches
+
+# ruche/ruchesListeRucher.html
 daterucher=Date rucher
 
-carteGg=Carte Google
-carteIgn=Carte IGN
-carteOsm=Carte OSM
+# ruche/rucheForm.html
 nomexiste=Ce nom existe déjà
 
 # Ruche detail clone
@@ -188,6 +185,12 @@ evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterm
 # essaim/essaimGraphe.html
 MielKg=Miel(kg)
 MielDescKg=Miel descendance(kg) 
+
+# rucher/ruchersListe.html
+carteGg=Carte Google
+carteIgn=Carte IGN
+carteOsm=Carte OSM
+statistiquesruchers=Statistiques ruchers
 
 # rucher
 actif=Actif
@@ -236,13 +239,17 @@ rucherscarteign=Ruchers. Carte IGN
 couchemarqueursruchers=Couche des marqueurs Ruchers
 aiderucherlisteignmarkers=Doubleclic sur un rucher pour afficher son détail<br/>Un clic pour le sélectionner, puis clic pour le déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
 recentrer?=Recentrer tous les ruchers sur leurs ruches ?
-
-selectruchesajout=Sélectionner les ruches à ajouter
-ajoutruches=Ajout dans le rucher
 recentrer=Recentrer tous les ruchers sur leurs ruches
+
+# rucher/rucherAjout.html
+selectruchesajout=Sélectionner les ruches à ajouter
+
+# rucher/rucherRuchesAjoutForm.html
+ajoutruches=Ajout dans le rucher
+
+# rucher/rucherDetailOsm.html
 exportPng=Export PNG
 exportPdf=Export PDF
-statistiquesruchers=Statistiques ruchers
 distButinage=Distances de butinage
 
 # personne/personnesListe.html
