--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -163,18 +163,15 @@ ajouthausseXXsur=Add hive {0} on
 rucheType= Hive type
 
 # ruche/ruchesListe.html
-selectruchestraiter=Select hives for treatment
-
-# ruche
 ruche=Hive
+selectruchestraiter=Select hives for treatment
 ajouterRuche=Add a hive
-ajoutRuche=Addirion of a hive
 listeRuches=Hives list
+
+# ruche/ruchesListeRucher.html
 daterucher=Apiary date
 
-carteGg=Google Map
-carteIgn=IGN Map
-carteOsm=OSM Map
+# ruche/rucheForm.html
 nomexiste=This name already exist
 
 # Ruche detail clone
@@ -188,6 +185,12 @@ evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indet
 # essaim/essaimGraphe.html
 MielKg=Honey(kg)
 MielDescKg=Descendants honey(kg) 
+
+# rucher/ruchersListe.html
+carteGg=Google Map
+carteIgn=IGN Map
+carteOsm=OSM Map
+statistiquesruchers=Apiary statistics
 
 # rucher
 actif=Active
@@ -236,13 +239,17 @@ rucherscarteign=Apiaries. IGN Map
 couchemarqueursruchers=Apiary marker layer
 aiderucherlisteignmarkers=Doubleclic on an apiary to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect 
 recentrer?=Recenter all apiaries on their hives?
-
-selectruchesajout=Select hives to add
-ajoutruches=Addition in hive
 recentrer=Recenter all apiaries on their hives
+
+# rucher/rucherAjout.html
+selectruchesajout=Select hives to add
+
+# rucher/rucherRuchesAjoutForm.html
+ajoutruches=Addition in hive
+
+# rucher/rucherDetailOsm.html
 exportPng=PNG export
 exportPdf=PDF export
-statistiquesruchers=Apiary statistics
 distButinage=Foraging distances
 
 # personne/personnesListe.html
