Bar chart statistiques age des reines

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -270,6 +270,8 @@ personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est
 supprimercettepersonne=Supprimer cette personne ?
 
 # essaim/essaimsListe.html
+statistiquesproduction=Statistiques production
+statistiquesage=Statistiques âge des reines
 selectessaimstraiter=Sélectionner les essaims à traiter
 evenementsSucre=Ajouter des événements Sucre
 evenementsTraitement=Ajouter des événements Traitement
