--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -270,6 +270,8 @@ personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an 
 supprimercettepersonne=Delete this person?
 
 # essaim/essaimsListe.html
+statistiquesproduction=Production satistics
+statistiquesage=Queens age statistics
 selectessaimstraiter=Select swarms for treatment
 evenementsSucre=Add sugar events
 evenementsTraitement=Add treatment events
