stat age reines. on ignore les reines en couveuse.

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -116,6 +116,11 @@ Duree=Durée
 aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
 masquerInactif=Masquer les inactifs
 
+# essaim/essaimsStatAges.html
+Moyenne=Moyenne
+EcartType= Écart type
+EnCouveuse=En couveuse
+
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
 
