--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -116,6 +116,11 @@ Duree=Duration
 aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
 masquerInactif=Hide inactives
 
+# essaim/essaimsStatAges.html
+Moyenne=Mean
+EcartType= Standard deviation
+EnCouveuse=In incubator
+
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
 
