--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -119,7 +119,8 @@ masquerInactif=Masquer les inactifs
 # essaim/essaimsStatAges.html
 Moyenne=Moyenne
 EcartType= Écart type
-EnCouveuse=En couveuse
+EnCouveuse=Pas née
+horsRuche=Hors ruche
 
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
