statistiques reines popover d'aide

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -109,6 +109,8 @@ commentaire2=Commentaire2
 commentaire3=Commentaire3
 
 # essaim/essaimStatistiques.html
+ageReines=Âge des reines
+aideReineIgnorees=Ces reines ne sont pas prises en compte dans ces statistiques
 Max=Max
 Min=Min
 Moyen=Moyen
