--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -109,6 +109,8 @@ commentaire2=Comments2
 commentaire3=Comments3
 
 # essaim/essaimStatistiques.html
+ageReines=Queen's age
+aideReineIgnorees=These queens are not taken into account in these statistics
 Max=Max
 Min=Min
 Moyen=Average
