--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -121,8 +121,8 @@ masquerInactif=Hide inactives
 # essaim/essaimsStatAges.html
 Moyenne=Mean
 EcartType= Standard deviation
-EnCouveuse=Not born
-horsRuche=Outside the hive
+#EnCouveuse=Not born
+#horsRuche=Outside the hive
 
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
