--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -11,6 +11,9 @@ cloneruchecreees=Ruche(s) {0} créée(s)
 pasDeHausseAenlever=Pas de hausses à enlever de leurs ruches
 haussesEnlevees=Les hausses {0} ont été enlevées des ruches {1}
 
+# recoltesListe.html
+statistiquesProd=Statistiques production annuelle
+
 # include.html
 include.footer= *** Ruches - GPL3 - 
 liste=Liste
