--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -11,6 +11,9 @@ cloneruchecreees=Hives(s) {0} created
 pasDeHausseAenlever=No supers to remove from their hives
 haussesEnlevees=Supers {0} have been removed from their hives {1}
 
+# recoltesListe.html
+statistiquesProd=Annual production statistics
+
 # include.html
 include.footer= *** Ruches - GPL3 -
 liste=List
