infos.html ajout alerte date naissance essaim sup à date acqusition

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -77,6 +77,7 @@ rayonkm=Rayon (km)
 surfacekm2=Surface (km²)
 ruchesAPlusde=ruche(s) à plus de {0}m de leurs ruchers
 ruchesSansEven=ruche(s) sans événement depuis {0} semaines
+essaimDateNaissSupAcquis=essaim(s) date naissance reine supérieure à date acquisition
 
 # Templates commun
 modifier=Modifier
