--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -77,6 +77,7 @@ rayonkm=Radius (km)
 surfacekm2=Surface (km²)
 ruchesAPlusde=hive(s) more than {0}m from their apiaries
 ruchesSansEven=hive(s) without event for {0} weeks
+essaimDateNaissSupAcquis=swarm date of birth queen greater than date of acquisition
 
 # Templates commun
 modifier=Modify
