detailEssaim ajout action essaimer

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -11,6 +11,9 @@ cloneruchecreees=Ruche(s) {0} créée(s)
 pasDeHausseAenlever=Pas de hausses à enlever de leurs ruches
 haussesEnlevees=Les hausses {0} ont été enlevées des ruches {1}
 
+# EssaimController.java
+LeNomXXExiste=Le nom {0} existe déjà
+
 # recoltesListe.html
 statistiquesProd=Statistiques production annuelle
 
@@ -111,6 +114,10 @@ ProductionEssaimRecolte=Production Essaim/Récolte
 commentaire1=Commentaire1
 commentaire2=Commentaire2
 commentaire3=Commentaire3
+
+# essaim/essaimEssaimerForm.html
+Essaimage=Essaimage
+NomNouvelEssaim=Nom du nouvel essaim
 
 # essaim/essaimStatistiques.html
 ageReines=Âge des reines
@@ -354,6 +361,7 @@ evenementTraitement=Ajouter un événement Traitement
 evenementDispersion=Disperser/Remérer
 evenementPesee=Ajouter un événement Pesée
 evenementCadres=Ajouter un événement Cadres
+essaimer=Essaimer
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
