--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -7,6 +7,9 @@ Idhausseinconnu=Unknown super id
 # RucheController.java
 cloneruchecreees=Hives(s) {0} created
 
+# EssaimController.java
+LeNomXXExiste=The name {0} already exists
+
 # RecolteHausseController.java
 pasDeHausseAenlever=No supers to remove from their hives
 haussesEnlevees=Supers {0} have been removed from their hives {1}
@@ -111,6 +114,10 @@ ProductionEssaimRecolte=Swarm/Harvest Production
 commentaire1=Comments1
 commentaire2=Comments2
 commentaire3=Comments3
+
+# essaim/essaimEssaimerForm.html
+Essaimage=Swarming
+NomNouvelEssaim=Name of the new swarm
 
 # essaim/essaimStatistiques.html
 ageReines=Queen's age
@@ -354,6 +361,7 @@ evenementTraitement=Add a treatment event
 evenementDispersion=Add a dispersion event/Change queen
 evenementPesee=Add a weight event
 evenementCadres=Add a frame event
+essaimer=Swarm
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
