possibilité de mettre un essaim dans une ruche ayant déjà un essaim

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -326,6 +326,7 @@ commentaireLotHausses=Ajout d'un commentaire à un lot de hausses
 
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
+AttentionDipersion=Attention, Enregistrer va disperser l''essaim {0}
 
 # essaim
 essaim=Essaim
@@ -342,6 +343,7 @@ essaimdanslaruche=Cet essaim est dans la ruche
 
 # essaim/essaimAssociation.html
 mettreessaimdanslaruche=Mettre cet essaim dans le ruche :
+AvecEssaim=Avec Essaim
 
 mettreessaimdansruche=Mettre l'essaim dans cette ruche
 retourrucheaudepot=Retour de la ruche au dépôt
