--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -326,6 +326,7 @@ commentaireLotHausses=Add a comment to the batch of supers
 
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Exchange positions of hives {0} and {1}
+AttentionDipersion=Attention save will disperse the swarm {0}
 
 # essaim
 essaim=Swarm
@@ -342,6 +343,7 @@ essaimdanslaruche=This swarm in in hive
 
 # essaim/essaimAssociation.html
 mettreessaimdanslaruche=Put this swarm in hive :
+AvecEssaim=With Swarm
 
 mettreessaimdansruche=Put swarm in this hive
 retourrucheaudepot=Hive back to depot
