messages.properties classement, navbar corrrections

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -137,10 +137,12 @@ EcartType= Écart type
 
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
+ProductionRuchersRecolte=Production Ruchers par récolte
 
 # error.html
 page=Page
 oups=Oups, quelque chose s'est mal passé !
+Erreur=Erreur
 
 # rucher/rucherDetail.html
 Pasderuche=Pas de ruche actuellement dans ce rucher
@@ -165,6 +167,8 @@ dateAcquisition=Acquisition
 nbCadresMax=Cadres max
 listeHausses=Liste des hausses
 lesRuches=Ruches
+ajoutRetraitHausses=Ajouter/Retirer/Réordonner des hausses
+Pasdehausse=Pas de hausse
 
 # ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
@@ -222,7 +226,6 @@ listeRuchers=Liste des ruchers
 depot=Dépôt
 ressource=Ressource
 ajoutRuches=Ajouter des ruches
-creationevecadrezero=Création événement 0 cadre
 poidsParRuches=Poids/Ruches
 type=Type
 nb=Nb
@@ -368,17 +371,14 @@ essaimer=Essaimer
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
 nouvellereine=Remérage : choisir l'essaim à mettre dans la ruche
+creationevecadrezero=Création événement 0 cadre
 
-# hausse
-hausse=Hausse
-lesHausses=Hausses
-Pasdehausse=Pas de hausse
-ajouterHausses=Ajouter des hausses
-ajouterHausse=Ajouter une hausse
-ajoutRetraitHausses=Ajouter/Retirer/Réordonner des hausses
-nombredecadres=Nombre de cadres
-nombredecadresmax=Nombre de cadres max
+# hausse/hausseForm.html
 saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
+nombredecadresmax=Nombre de cadres max
+nombredecadres=Nombre de cadres
+ajouterHausse=Ajouter une hausse
+hausse=Hausse
 
 # Hausse detail clone
 clonehaussecreees=Hausse(s) {0} créée(s)
@@ -398,12 +398,11 @@ CHATAIGNIER=Châtaignier
 TOUTES_FLEURS=Toutes fleurs
 ROMARIN=Romarin
 
-ProductionRuchersRecolte=Production Ruchers par récolte
-
 # recolte/recolteChoixHausses.html
 ajoutretraithaussesrecolte=Ajout/Retrait de hausses
 retirerHausses=Retirer des hausses
 selecthaussestraiter=Sélectionner les hausses à traiter
+ajouterHausses=Ajouter des hausses
 
 # recolte/recolteHausseForm.html
 plus=Plus
@@ -488,6 +487,7 @@ evenementRemplissage=Ajouter un événement Remplissage
 haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
 supprimerevenement=Supprimer cet événement ?
 afficherrucheetc=Afficher/masquer ruche, essaim...
+lesHausses=Hausses
 
 # rucher/rucherMeteo.html
 aujourdhui=Aujourd'hui
