--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -137,10 +137,12 @@ EcartType= Standard deviation
 
 # rucher/rucherStatistiques.html
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
+ProductionRuchersRecolte=Production Apiaries per harvest
 
 # error.html
 page=Page
 oups=Oups, something went wrong !
+Erreur=Error
 
 # rucher/rucherDetail.html
 Pasderuche=Currently no hive in this apiary
@@ -165,6 +167,8 @@ dateAcquisition=Acquisition
 nbCadresMax=Frames max
 listeHausses=Supers list
 lesRuches=Hives
+ajoutRetraitHausses=Add/Remove/Reorder supers
+Pasdehausse=No super
 
 # ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Add/Remove/Order supers.
@@ -222,7 +226,6 @@ listeRuchers=Apiaries list
 depot=Depot
 ressource=Resource
 ajoutRuches=Add hives
-creationevecadrezero=Create 0 super event
 poidsParRuches=Weight/Hives
 type=Type
 nb=Nb
@@ -368,17 +371,14 @@ essaimer=Swarm
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
 nouvellereine=New queen : choose the swarm for hive
+creationevecadrezero=Create 0 super event
 
-# hausse
-hausse=Super
-lesHausses=Supers
-Pasdehausse=No super
-ajouterHausses=Add supers
-ajouterHausse=Add a super
-ajoutRetraitHausses=Add/Remove/Reorder supers
-nombredecadres=Frame number
-nombredecadresmax=Max frame number
+# hausse/hausseForm.html
 saisirnbcadresinfmax=Get number of frames < Max frame number
+nombredecadresmax=Max frame number
+nombredecadres=Frame number
+ajouterHausse=Add a super
+hausse=Super
 
 # Hausse detail clone
 clonehaussecreees=Super(s) {0} created
@@ -398,12 +398,11 @@ CHATAIGNIER=Chestnut tree
 TOUTES_FLEURS=Polyfloral
 ROMARIN=Rosemary
 
-ProductionRuchersRecolte=Production Apiaries per harvest
-
 # recolte/recolteChoixHausses.html
 ajoutretraithaussesrecolte=Addition/Removal of supers
 retirerHausses=Remove supers
 selecthaussestraiter=Select the supers to be processed
+ajouterHausses=Add supers
 
 # recolte/recolteHausseForm.html
 plus=More
@@ -488,6 +487,7 @@ evenementRemplissage=Add a filling event
 haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
 supprimerevenement=Delete this event?
 afficherrucheetc=Show/hide hive, swarm...
+lesHausses=Supers
 
 # rucher/rucherMeteo.html
 aujourdhui=Today
