messages.properties classement

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -14,7 +14,7 @@ LeNomXXExiste=Le nom {0} existe déjà
 pasDeHausseAenlever=Pas de hausses à enlever de leurs ruches
 haussesEnlevees=Les hausses {0} ont été enlevées des ruches {1}
 
-# recoltesListe.html
+# recolte/recoltesListe.html
 statistiquesProd=Statistiques production annuelle
 
 # include.html
@@ -154,6 +154,10 @@ nomruchesvirgule=Nom des ruches séparés par une virgule
 historique=Historique
 poidsVide=Poids
 nbCadres=Cadres
+rucher=Rucher
+depot=Dépôt
+ajoutRuches=Ajouter des ruches
+poidsParRuches=Poids/Ruches
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=Cette ruche ne peut être supprimée, elle est référencée dans une récolte
@@ -169,6 +173,7 @@ listeHausses=Liste des hausses
 lesRuches=Ruches
 ajoutRetraitHausses=Ajouter/Retirer/Réordonner des hausses
 Pasdehausse=Pas de hausse
+evenementCommentaire=Ajouter un événement Commentaire
 
 # ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
@@ -190,6 +195,7 @@ ruche=Ruche
 selectruchestraiter=Sélectionner les ruches à traiter
 ajouterRuche=Ajouter une ruche
 listeRuches=Liste des ruches
+type=Type
 
 # ruche/ruchesListeRucher.html
 daterucher=Date rucher
@@ -197,8 +203,7 @@ daterucher=Date rucher
 # ruche/rucheForm.html
 nomexiste=Ce nom existe déjà
 
-# Ruche detail clone
-evenementCommentaire=Ajouter un événement Commentaire
+# ruche/ruchePeseeForm.html
 pesee=Pesée
 
 # ruche/rucheCadreForm
@@ -214,20 +219,15 @@ carteGg=Carte Google
 carteIgn=Carte IGN
 carteOsm=Carte OSM
 statistiquesruchers=Statistiques ruchers
-
-# rucher
 actif=Actif
-rucher=Rucher
 lesRuchers=Ruchers
 contact=Contact
 adresse=Adresse
 ajouterRucher=Ajouter un rucher
 listeRuchers=Liste des ruchers
-depot=Dépôt
 ressource=Ressource
-ajoutRuches=Ajouter des ruches
-poidsParRuches=Poids/Ruches
-type=Type
+
+# rucher/rucherHisto.html
 nb=Nb
 etat=État
 
@@ -370,7 +370,7 @@ essaimer=Essaimer
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
-nouvellereine=Remérage : choisir l'essaim à mettre dans la ruche
+nouvellereine=Remérage, essaim à mettre dans la ruche
 creationevecadrezero=Création événement 0 cadre
 
 # hausse/hausseForm.html
