--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -14,7 +14,7 @@ LeNomXXExiste=The name {0} already exists
 pasDeHausseAenlever=No supers to remove from their hives
 haussesEnlevees=Supers {0} have been removed from their hives {1}
 
-# recoltesListe.html
+# recolte/recoltesListe.html
 statistiquesProd=Annual production statistics
 
 # include.html
@@ -154,6 +154,10 @@ nomruchesvirgule=Hive names separated with a comma
 historique=History
 poidsVide=Weight
 nbCadres=Frames
+rucher=Apiary
+depot=Depot
+ajoutRuches=Add hives
+poidsParRuches=Weight/Hives
 
 # ruche/rucheDetail.html
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
@@ -169,6 +173,7 @@ listeHausses=Supers list
 lesRuches=Hives
 ajoutRetraitHausses=Add/Remove/Reorder supers
 Pasdehausse=No super
+evenementCommentaire=Add a comment event
 
 # ruche/rucheAjoutRetrait.html
 ajoutretraithausses=Add/Remove/Order supers.
@@ -190,6 +195,7 @@ ruche=Hive
 selectruchestraiter=Select hives for treatment
 ajouterRuche=Add a hive
 listeRuches=Hives list
+type=Type
 
 # ruche/ruchesListeRucher.html
 daterucher=Apiary date
@@ -197,8 +203,7 @@ daterucher=Apiary date
 # ruche/rucheForm.html
 nomexiste=This name already exist
 
-# Ruche detail clone
-evenementCommentaire=Add a comment event
+# ruche/ruchePeseeForm.html
 pesee=Weighing
 
 # ruche/rucheCadreForm
@@ -214,20 +219,15 @@ carteGg=Google Map
 carteIgn=IGN Map
 carteOsm=OSM Map
 statistiquesruchers=Apiary statistics
-
-# rucher
 actif=Active
-rucher=Apiary
 lesRuchers=Apiaries
 contact=Contact
 adresse=Address
 ajouterRucher=Add an apiary
 listeRuchers=Apiaries list
-depot=Depot
 ressource=Resource
-ajoutRuches=Add hives
-poidsParRuches=Weight/Hives
-type=Type
+
+# rucher/rucherHisto.html
 nb=Nb
 etat=State
 
@@ -370,7 +370,7 @@ essaimer=Swarm
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
-nouvellereine=New queen : choose the swarm for hive
+nouvellereine=New queen, swarm for hive
 creationevecadrezero=Create 0 super event
 
 # hausse/hausseForm.html
