écrans de détail table-responsive sur div et table-sm sur table

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -4,10 +4,11 @@ Idrucherinconnu=Identifiant rucher inconnu
 Idessaiminconnu=Identifiant essaim inconnu
 Idhausseinconnu=Identifiant hausse inconnu
 
-# RucheController.java
+# ruche/RucheController.java
 cloneruchecreees=Ruche(s) {0} créée(s)
 
-# EssaimController.java
+# essaim/EssaimController.java
+cloneessaimcrees=Essaim(s) {0} créé(s)
 LeNomXXExiste=Le nom {0} existe déjà
 
 # RecolteHausseController.java
@@ -251,9 +252,10 @@ exportKML=Export KML
 parcoursRecalcul=Re-calculer le parcours des ruches
 cercles=Cercles
 
-# carte ign
-ajoutderuches=Ajout de ruches
+# rucher/ruchersListeOsm.html
 rucherscarteosm=Ruchers. Carte OpenStreetMap
+
+# rucher/ruchersListeGg.html
 rucherscarteggmaps=Ruchers. Carte Google
 
 # rucher/ruhersListeIgn.html
@@ -265,6 +267,7 @@ recentrer=Recentrer tous les ruchers sur leurs ruches
 
 # rucher/rucherAjout.html
 selectruchesajout=Sélectionner les ruches à ajouter
+ajoutderuches=Ajout de ruches
 
 # rucher/rucherRuchesAjoutForm.html
 ajoutruches=Ajout dans le rucher
@@ -350,8 +353,6 @@ AvecEssaim=Avec Essaim
 
 mettreessaimdansruche=Mettre l'essaim dans cette ruche
 retourrucheaudepot=Retour de la ruche au dépôt
-
-cloneessaimcrees=Essaim(s) {0} créé(s)
 
 # essaim/essaimDetail.html
 essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
