--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -4,10 +4,11 @@ Idrucherinconnu=Unknown apiary id
 Idessaiminconnu=Unknown swarm id
 Idhausseinconnu=Unknown super id
 
-# RucheController.java
+# ruche/RucheController.java
 cloneruchecreees=Hives(s) {0} created
 
-# EssaimController.java
+# essaim/EssaimController.java
+cloneessaimcrees=Swarm(s) {0} created
 LeNomXXExiste=The name {0} already exists
 
 # RecolteHausseController.java
@@ -251,9 +252,10 @@ exportKML=KML export
 parcoursRecalcul=Re-calculate hive route
 cercles=Circles
 
-# carte ign
-ajoutderuches=Add hives
+# rucher/ruchersListeOsm.html
 rucherscarteosm=Apiaries. OpenStreetMap
+
+# rucher/ruchersListeGg.html
 rucherscarteggmaps=Apiaries. Google Maps
 
 # rucher/ruhersListeIgn.html
@@ -265,6 +267,7 @@ recentrer=Recenter all apiaries on their hives
 
 # rucher/rucherAjout.html
 selectruchesajout=Select hives to add
+ajoutderuches=Add hives
 
 # rucher/rucherRuchesAjoutForm.html
 ajoutruches=Addition in hive
@@ -350,8 +353,6 @@ AvecEssaim=With Swarm
 
 mettreessaimdansruche=Put swarm in this hive
 retourrucheaudepot=Hive back to depot
-
-cloneessaimcrees=Swarm(s) {0} created
 
 # essaim/essaimDetail.html
 essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
