messages.properties classement

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -276,6 +276,7 @@ ajoutruches=Ajout dans le rucher
 exportPng=Export PNG
 exportPdf=Export PDF
 distButinage=Distances de butinage
+Pasdessaim=Pas d'essaim
 
 # personne/personnesListe.html
 prenom=Prénom
@@ -314,6 +315,7 @@ reineDateNaissance=Date de naissance
 souche=Souche
 agressivite=Agressivité
 proprete=Propreté
+listeEssaims=Liste des essaims
 
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Ajout de sucre au lot d'essaims 
@@ -333,23 +335,16 @@ commentaireLotHausses=Ajout d'un commentaire à un lot de hausses
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Échanger les positions des ruches {0} et {1}
 AttentionDipersion=Attention, Enregistrer va disperser l''essaim {0}
-
-# essaim
-essaim=Essaim
-Pasdessaim=Pas d'essaim
-lesEssaims=Essaims
-traitement=Traitement varroa
-listeEssaims=Liste des essaims
-actionSucre=Sucre
-ajoutSucre=Ajout de sucre 
-dispersion=Dispersion 
-associationruche=Associer avec une ruche
 association=Association
-essaimdanslaruche=Cet essaim est dans la ruche
+
+# essaim/essaimSucreForm.html
+ajoutSucre=Ajout de sucre 
 
 # essaim/essaimAssociation.html
 mettreessaimdanslaruche=Mettre cet essaim dans la ruche :
 AvecEssaim=Avec Essaim
+essaimdanslaruche=Cet essaim est dans la ruche
+associationruche=Associer avec une ruche
 
 mettreessaimdansruche=Mettre l'essaim dans cette ruche
 retourrucheaudepot=Retour de la ruche au dépôt
@@ -368,11 +363,16 @@ evenementDispersion=Disperser/Remérer
 evenementPesee=Ajouter un événement Pesée
 evenementCadres=Ajouter un événement Cadres
 essaimer=Essaimer
+actionSucre=Sucre
+traitement=Traitement varroa
+lesEssaims=Essaims
+essaim=Essaim
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
 nouvellereine=Remérage, essaim à mettre dans la ruche
 creationevecadrezero=Création événement 0 cadre
+dispersion=Dispersion 
 
 # hausse/hausseForm.html
 saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
