--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -276,6 +276,7 @@ ajoutruches=Addition in hive
 exportPng=PNG export
 exportPdf=PDF export
 distButinage=Foraging distances
+Pasdessaim=No swarm
 
 # personne/personnesListe.html
 prenom=First name
@@ -314,6 +315,7 @@ reineDateNaissance=Date of birth
 souche=Stem
 agressivite=Agressiveness
 proprete=Cleanliness
+listeEssaims=Swarms list
 
 # essaim/essaimSucreLotForm.html
 ajoutSucreLot=Add sugar to the batch of swarms 
@@ -333,23 +335,16 @@ commentaireLotHausses=Add a comment to the batch of supers
 # essaim/essaimAssociationForm.html
 echangePositionsRuches=Exchange positions of hives {0} and {1}
 AttentionDipersion=Attention save will disperse the swarm {0}
-
-# essaim
-essaim=Swarm
-Pasdessaim=No swarm
-lesEssaims=Swarms
-traitement=Varroa treatment
-listeEssaims=Swarms list
-actionSucre=Sugar
-ajoutSucre=Add sugar 
-dispersion=Dispersing 
-associationruche=Association with a hive
 association=Association
-essaimdanslaruche=This swarm in in hive
+
+# essaim/essaimSucreForm.html
+ajoutSucre=Add sugar 
 
 # essaim/essaimAssociation.html
 mettreessaimdanslaruche=Put this swarm in hive :
 AvecEssaim=With Swarm
+essaimdanslaruche=This swarm in in hive
+associationruche=Association with a hive
 
 mettreessaimdansruche=Put swarm in this hive
 retourrucheaudepot=Hive back to depot
@@ -368,11 +363,16 @@ evenementDispersion=Add a dispersion event/Change queen
 evenementPesee=Add a weight event
 evenementCadres=Add a frame event
 essaimer=Swarm
+actionSucre=Sugar
+traitement=Varroa treatment
+lesEssaims=Swarms
+essaim=Swarm
 
 # essaim/essaimDispersionForm.html
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
 nouvellereine=New queen, swarm for hive
 creationevecadrezero=Create 0 super event
+dispersion=Dispersing 
 
 # hausse/hausseForm.html
 saisirnbcadresinfmax=Get number of frames < Max frame number
